# Universe-in-a-Box

./: .gitignore  CMakeLists.txt  README.md  Responses.md
app/: CMakeLists.txt  NBody_Comparison.cpp  NBody_Visualiser.cpp
benchmark/: CMakeLists.txt  benchmarks.cpp
include/: Simulation.hpp  Utils.hpp  data.hpp  particle.hpp  particles.hpp
lib/: CMakeLists.txt  Simulation.cpp  Utils.cpp  particle.cpp  particles.cpp
test/: CMakeLists.txt  data.cpp  test_simulation.cpp
